--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -18,12 +18,12 @@
   "eat-kano": "Eat Kano",
   "default-dfjk": "DFJK by default",
   "default-20s": "20 seconds by default",
-  "game-title": "Eat Kano",
-  "game-intro1": "Start from the bottom",
-  "game-intro2": "Can you tap 150 times?",
+  "game-title": "吃掉小梓业",
+  "game-intro1": "从底部开始",
+  "game-intro2": "砍you 踹?",
   "record-rank": "To record rank(filtered special chars)",
   "no-ad-bad-lang": "No ads or bad language(optional)",
-  "time-up": "Time up",
+  "time-up": "时间到",
   "calculating": "Wait...",
   "score": "Score",
   "best": "Best",
